fixing the milestone flexbox issuse on small devices.

--- a/app/assets/styles/components/_milestone.css
+++ b/app/assets/styles/components/_milestone.css
@@ -1,7 +1,7 @@
 .milestone {
   border-top: 2px solid $mainBlack;
   margin: 3em 1em;
-  width: 100%;
+  flex-basis: 100%;
   padding-top: 0.4em;
 
   @mixin atLarge {
