--- a/app/assets/styles/layout/_flex.css
+++ b/app/assets/styles/layout/_flex.css
@@ -1,8 +1,6 @@
 .flex {
   display: flex;
-  &--inline {
-    display: inline-flex;
-  }
+
   &--space-between {
     justify-content: space-between;
   }
